ocp/frontend/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pulse-frontend
  labels:
    app: pulse-frontend
spec:
  selector:
    app: pulse-frontend
  ports:
    - name: http
      port: 3000
      targetPort: http
  type: ClusterIP
