ocp/frontend/04-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: pulse-frontend
  labels:
    app: pulse-frontend
spec:
  to:
    kind: Service
    name: pulse-frontend
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
